<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.main.contacts.DetailContact"
            android:background="@color/white">

            <ImageView
                android:id="@+id/ivBackToContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sfpro_semibold"
                android:text="@string/detail"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvEditDetailContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/sfpro_regular"
                android:text="@string/edit"
                android:textColor="@color/primary"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ivBackToContact"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUserDetailContact"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/ic_user_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />


            <TextView
                android:id="@+id/tvNameUserDetailContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivUserDetailContact"
                android:layout_marginTop="12dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:fontFamily="@font/sfpro_medium"
                android:text="@string/hello_blank_fragment"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivUserDetailContact" />

            <TextView
                android:id="@+id/tvPhoneUserDetailContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNameUserDetailContact"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/hello_blank_fragment"
                android:textSize="14sp"
                android:textColor="@color/grey_text"
                android:fontFamily="@font/sfpro_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNameUserDetailContact" />

            <TextView
                android:id="@+id/layoutDetailContactToMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/round_detail"
                android:drawablePadding="4dp"
                android:fontFamily="@font/sfpro_medium"
                android:paddingVertical="8dp"
                android:text="@string/messages"
                android:gravity="center"
                android:textColor="@color/primary"
                android:textSize="10sp"
                app:layout_constraintWidth_percent="0.4"
                app:drawableTopCompat="@drawable/mess"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneUserDetailContact"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/layoutDetailContactToContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_detail"
                android:drawablePadding="4dp"
                android:fontFamily="@font/sfpro_medium"
                android:paddingVertical="8dp"
                app:layout_constraintWidth_percent="0.4"
                android:text="@string/contacts"
                android:textColor="@color/primary"
                android:textSize="10sp"
                android:gravity="center"
                app:drawableTopCompat="@drawable/ic_contact2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneUserDetailContact"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>