<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stateListAnimator="@null"
        android:background="@color/white"
        tools:context=".ui.main.newmess.NewMessFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_semibold"
            android:text="@string/new_messages"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvCancelNewMess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sfpro_regular"
            android:text="@string/cancel"
            android:textColor="@color/primary"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view1"
            android:layout_marginTop="11dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <TextView
            android:id="@+id/tvTo"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="17sp"
            android:textColor="@color/grey_text_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />
        <EditText
            android:id="@+id/etSendToNew"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:background="@null"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="17sp"
            android:cursorVisible="true"
            app:layout_constraintStart_toEndOf="@id/tvTo"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            app:layout_constraintEnd_toEndOf="parent">
            <requestFocus />
        </EditText>
        <View
            android:id="@+id/view2"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSendToNew" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNewMess"
            android:splitMotionEvents="false"
            tools:listitem="@layout/item_new_mess"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/etEnterNewMess"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2" />


        <EditText
            android:id="@+id/etEnterNewMess"
            android:maxLines="4"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/round_message"
            android:fontFamily="@font/sfpro_regular"
            android:hint="@string/mess"
            android:textColorHint="@color/grey_text_done"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="57dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/ivSendNewMess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/etEnterNewMess" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>