<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.chat.ChatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:drawablePadding="8dp"
            android:text="@string/messages"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/im_user"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_user_contact" />

        <TextView
            android:id="@+id/tvNameUser"
            android:ellipsize="end"
            android:ems="15"
            android:gravity="center"
            android:maxLines="1"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/user_name"
            app:layout_constraintLeft_toLeftOf="@id/im_user"
            app:layout_constraintRight_toRightOf="@id/im_user"
            app:layout_constraintTop_toBottomOf="@id/im_user" />
        <View
            android:id="@+id/view"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_text_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNameUser" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChatMessage"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/etEnterMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/etEnterMessage"
            android:maxLines="4"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/round_message"
            android:fontFamily="@font/sfpro_regular"
            android:hint="@string/mess"
            android:textColorHint="@color/grey_text_done"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="57dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivSendMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/etEnterMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>